fix distorted pictures

--- a/source/assets/css/content/_content.scss
+++ b/source/assets/css/content/_content.scss
@@ -53,6 +53,7 @@ body {
 
 	img {
 		max-width: 100%;
+	  	height: auto;
 	}
 
 	.widg_sidebar__object {
